tests/snapshots/codegen_snapshot_test__match_option.snap
---
source: tests/codegen_snapshot_test.rs
expression: code
---
pub fn unwrap_or(x: Option<i64>, default: i64) -> i64 {
    match x {
        Some(v) => v,
        None => default,
    }
}
