tests/snapshots/codegen_snapshot_test__simple_add.snap
---
source: tests/codegen_snapshot_test.rs
expression: code
---
pub fn add(a: i64, b: i64) -> i64 {
    (a).wrapping_add(b)
}
