tests/snapshots/codegen_snapshot_test__string_concat.snap
---
source: tests/codegen_snapshot_test.rs
expression: code
---
pub fn greet(name: String) -> String {
    AlmideConcat::concat("Hello, ", name)
}
